--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,16 +1,32 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center"
     tools:context="${packageName}.${activityClass}" >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-    	android:layout_height="wrap_content"
-    	android:id="@+id/main_root"
-    	android:orientation="vertical">
-        
-    </LinearLayout>
-
-</ScrollView>
+    <Button
+        android:id="@+id/english"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="English"
+        android:onClick="english" />
+	
+    
+    <Button
+        android:id="@+id/hindi"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="हिंदी"
+        android:onClick="hindi" />
+    
+    <Button
+        android:id="@+id/arabic"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="العربية"
+        android:onClick="arabic" />
+    
+</LinearLayout>
 
