--- a/res/layout/activity_practice.xml
+++ b/res/layout/activity_practice.xml
@@ -20,5 +20,24 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true" 
         android:background="#FFFFFF" />
+    
+
+    <Button
+        android:id="@+id/save"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:text="Save" 
+        android:onClick="save"/>
+
+    <Button
+        android:id="@+id/clear"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:text="Clear" 
+        android:onClick="clear"/>
 
 </RelativeLayout>
